Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16271

replay-single test_89 FAIL: 20480 blocks leaked

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Lai Siyao <lai.siyao@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/d1100f6d-6ef7-4e77-9e31-f6de3a6b208e

      == replay-single test 89: no disk space leak on late ost connection ========================================================== 19:47:35 
      ...
      Waiting for orphan cleanup...
      CMD: onyx-60vm4 /usr/sbin/lctl list_param osp.*osc*.old_sync_processed 2> /dev/null
      osp.lustre-OST0000-osc-MDT0000.old_sync_processed
      osp.lustre-OST0001-osc-MDT0000.old_sync_processed
      wait 40 secs maximumly for onyx-60vm4 mds-ost sync done.
      CMD: onyx-60vm4 /usr/sbin/lctl get_param -n osp.*osc*.old_sync_processed
      sleep 5 for ZFS zfs
      Waiting for MDT destroys to complete
      CMD: onyx-60vm4 /usr/sbin/lctl get_param -n osp.*.destroys_in_flight
       replay-single test_89: @@@@@@ FAIL: 20480 blocks leaked 
        Trace dump:
        = /usr/lib64/lustre/tests/test-framework.sh:6524:error()
        = /usr/lib64/lustre/tests/replay-single.sh:3329:test_89()
        = /usr/lib64/lustre/tests/test-framework.sh:6860:run_one()
        = /usr/lib64/lustre/tests/test-framework.sh:6910:run_one_logged()
        = /usr/lib64/lustre/tests/test-framework.sh:6747:run_test()
        = /usr/lib64/lustre/tests/replay-single.sh:3331:main()
      

            aboyko Alexander Boyko
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: