lustre/ldlm/ldlm_lib.c
@@ -2825,6 +2825,15 @@ static int target_recovery_thread(void *arg)
 		OBP(obd, iocontrol)(OBD_IOC_LLOG_CANCEL, obd->obd_self_export,
 				    0, NULL, NULL);
 
+	list_for_each_entry(req, &obd->obd_final_req_queue, rq_list) {
+		/*
+		 * Because the waiting client can not send ping to server,
+		 * so we need refresh the last_request_time, to avoid the
+		 * export is being evicted
+		 */
+		ptlrpc_update_export_timer(req->rq_export, 0);
+	}
+
 	/*
 	 * We drop recoverying flag to forward all new requests
 	 * to regular mds_handle() since now
@@ -2843,12 +2852,6 @@ static int target_recovery_thread(void *arg)
 			  libcfs_nidstr(&req->rq_peer.nid));
 		handle_recovery_req(thread, req,
 				    trd->trd_recovery_handler);
-		/*
-		 * Because the waiting client can not send ping to server,
-		 * so we need refresh the last_request_time, to avoid the
-		 * export is being evicted
-		 */
-		ptlrpc_update_export_timer(req->rq_export, 0);
 		target_request_copy_put(req);
 	}
 
